# hellox

./: .gitignore  CODE_OF_CONDUCT.md  COMMIT_MESSAGE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_CN.md  SECURITY.md
crates/hellox-agent/: Cargo.toml
crates/hellox-agent/src/: client.rs  lib.rs  permissions.rs  planning.rs  prompt.rs  session.rs  storage.rs  telemetry.rs  worker_job.rs
crates/hellox-agent/src/session/: persistence.rs  prompt_state.rs  query_runtime.rs  system_prompt.rs  telemetry.rs  tests.rs  workspace_brief.rs
crates/hellox-agent/src/tools/: agent.rs  mcp.rs  mod.rs  runtime.rs  shell.rs  tasks.rs  ui.rs  utility.rs  web.rs
crates/hellox-auth/: Cargo.toml
crates/hellox-auth/src/: backend.rs  lib.rs  oauth.rs  store.rs  tests.rs
crates/hellox-bridge/: Cargo.toml
crates/hellox-bridge/src/: lib.rs  protocol.rs  tests.rs
crates/hellox-cli/: Cargo.toml
crates/hellox-cli/src/: assistant_panel.rs  auth_commands.rs  auto_compact.rs  auto_memory.rs  bridge_commands.rs  bridge_panel.rs  cli_auth_types.rs  cli_bridge_types.rs  cli_commands.rs  cli_extension_types.rs  cli_install_types.rs  cli_plan_types.rs  cli_remote_types.rs  cli_server_types.rs  cli_style_types.rs  cli_sync_types.rs  cli_task_types.rs  cli_types.rs  cli_ui_types.rs  cli_workflow_types.rs  config_commands.rs  config_panel.rs  config_panel_selector.rs  diagnostics.rs  extension_commands.rs  hooks.rs  install_commands.rs  main.rs  main_extension_tests.rs  main_state_tests.rs  main_style_tests.rs  main_task_tests.rs  main_tests.rs  main_ui_tests.rs  mcp_panel.rs  memory.rs  memory_panel.rs  memory_panel_selector.rs  model_panel.rs  output_style_commands.rs  (+53 more)
crates/hellox-cli/src/diagnostics/: agent_backend.rs
crates/hellox-cli/src/repl/: bridge_actions.rs  commands.rs  config_actions.rs  core_actions.rs  core_copy.rs  core_paths.rs  dispatch.rs  extension_actions.rs  format.rs  format_copy.rs  help_copy.rs  input_normalizer.rs  install_actions.rs  mcp_actions.rs  mod.rs  output_localizer.rs  plan_actions.rs  plugin_actions.rs  prompt_input.rs  prompt_shell_copy.rs  remote_actions.rs  selector_input.rs  selectors.rs  style_actions.rs  task_actions.rs  tests.rs  tests_bridge.rs  tests_diagnostics.rs  tests_extensions.rs  tests_install.rs  tests_mcp.rs  tests_memory.rs  tests_plugin.rs  tests_remote.rs  tests_search.rs  tests_state.rs  tests_style.rs  tests_tasks.rs  tests_ui.rs  tests_workflow.rs  (+8 more)
crates/hellox-cli/src/startup/: gateway.rs  interactive_select.rs  localization.rs  mod.rs  onboarding.rs  onboarding_copy.rs  test_support.rs  trust.rs  trust_copy.rs
crates/hellox-cli/src/workflow_overview/: tests.rs
crates/hellox-cli/src/workflow_panel/: tests.rs
crates/hellox-cli/src/workflow_runs/: render.rs  render_inspect.rs  selector.rs  store.rs
crates/hellox-core/: Cargo.toml
crates/hellox-core/src/: lib.rs
crates/hellox-gateway/: Cargo.toml
crates/hellox-gateway/src/: error.rs  files.rs  lib.rs  metrics.rs  streaming.rs
crates/hellox-memory/: Cargo.toml
crates/hellox-memory/src/: lib.rs  memory_archive.rs  memory_capture.rs  memory_decay.rs  memory_extract.rs  memory_query.rs  memory_retention.rs  memory_store.rs
crates/hellox-memory/src/memory_cluster/: jaccard.rs  mod.rs  tests.rs  tfidf.rs  tokenize.rs
crates/hellox-provider-anthropic/: Cargo.toml
crates/hellox-provider-anthropic/src/: lib.rs
crates/hellox-query/: Cargo.toml
crates/hellox-query/src/: lib.rs
crates/hellox-remote/: Cargo.toml
crates/hellox-remote/src/: client.rs  environment.rs  lib.rs  tests.rs  transport.rs
crates/hellox-repl/: Cargo.toml
crates/hellox-repl/src/: command_parser.rs  command_types.rs  input_helper.rs  lib.rs  mcp_command_types.rs  plan_command_parser.rs  plugin_command_types.rs  remote_command_parser.rs  runtime.rs  style_parser.rs  workflow_command_parser.rs  workflow_command_parser_authoring.rs  workflow_command_types.rs
crates/hellox-server/: Cargo.toml
crates/hellox-server/src/: http.rs  lib.rs  local_control.rs  tests.rs  tests_admin.rs  types.rs
crates/hellox-server/src/state/: base.rs  mod.rs  ownership.rs  sync_store.rs
crates/hellox-session/: Cargo.toml
crates/hellox-session/src/: lib.rs
crates/hellox-sync/: Cargo.toml
crates/hellox-sync/src/: boundaries.rs  lib.rs  local.rs  remote.rs  sources.rs  tests.rs  tests_sources.rs
crates/hellox-telemetry/: Cargo.toml
crates/hellox-telemetry/src/: lib.rs
crates/hellox-tool-runtime/: Cargo.toml
crates/hellox-tool-runtime/src/: lib.rs  question.rs
crates/hellox-tools-agent/: Cargo.toml
crates/hellox-tools-agent/fixtures/pane-host/: iterm-launch-follow-up.jsonl  tmux-launch-follow-up.jsonl
crates/hellox-tools-agent/src/: background_runtime.rs  coordination_tool.rs  lib.rs  native_pane_backend.rs  native_pane_backend_preflight.rs  native_pane_layout.rs  native_pane_runtime.rs  pane_host_harness.rs  remote_trigger_tool.rs  runtime_tool.rs  shared.rs  sleep_tool.rs  supervision_tool.rs  team_coordination_runtime.rs  team_layout.rs  team_layout_runtime.rs  team_member_contract.rs  team_registry_runtime.rs  team_registry_tool.rs  team_runtime_reconciliation.rs  team_runtime_support.rs  team_status_tool.rs  team_storage.rs  workflow.rs  workflow_branching.rs  workflow_support.rs  worktree.rs  worktree_tool.rs
crates/hellox-tools-agent/src/worktree/: tests.rs
crates/hellox-tools-fs/: Cargo.toml
crates/hellox-tools-fs/src/: files.rs  lib.rs  metadata.rs  notebook.rs  search.rs  support.rs  tests.rs
crates/hellox-tools-fs/src/files/: diff.rs  edit.rs  list.rs  read.rs  write.rs
crates/hellox-tools-mcp/: Cargo.toml
crates/hellox-tools-mcp/src/: auth.rs  config.rs  lib.rs  oauth.rs  registry.rs  tools.rs
crates/hellox-tools-mcp/src/lsp/: client.rs  config.rs  format.rs  mod.rs  tests.rs
crates/hellox-tools-mcp/src/runtime/: elicitation.rs  http.rs  mod.rs  stdio.rs  ws.rs
crates/hellox-tools-shell/: Cargo.toml
crates/hellox-tools-shell/src/: lib.rs
crates/hellox-tools-web/: Cargo.toml
crates/hellox-tools-web/src/: client.rs  fetch.rs  lib.rs  search.rs  support.rs
(+78 files in other folders)
