[package]
name = "hellox-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
hellox-compact = { path = "../hellox-compact" }
hellox-config = { path = "../hellox-config" }
hellox-gateway-api = { path = "../hellox-gateway-api" }
hellox-query = { path = "../hellox-query" }
hellox-style = { path = "../hellox-style" }
hellox-tool-runtime = { path = "../hellox-tool-runtime" }
hellox-tools-agent = { path = "../hellox-tools-agent" }
hellox-tools-fs = { path = "../hellox-tools-fs" }
hellox-tools-mcp = { path = "../hellox-tools-mcp" }
hellox-tools-shell = { path = "../hellox-tools-shell" }
hellox-tools-task = { path = "../hellox-tools-task" }
hellox-tools-ui = { path = "../hellox-tools-ui" }
hellox-tools-web = { path = "../hellox-tools-web" }
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sys-locale.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
axum.workspace = true
