[package]
name = "hellox-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
hellox-config = { path = "../hellox-config" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
uuid.workspace = true

[dev-dependencies]
axum.workspace = true
tokio.workspace = true
