[package]
name = "hellox-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
hellox-agent = { path = "../hellox-agent" }
hellox-config = { path = "../hellox-config" }
hellox-gateway-api = { path = "../hellox-gateway-api" }
serde.workspace = true
serde_json.workspace = true
