[package]
name = "hellox-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
hellox-agent = { path = "../hellox-agent" }
hellox-auth = { path = "../hellox-auth" }
hellox-bridge = { path = "../hellox-bridge" }
hellox-config = { path = "../hellox-config" }
hellox-gateway = { path = "../hellox-gateway" }
hellox-gateway-api = { path = "../hellox-gateway-api" }
hellox-memory = { path = "../hellox-memory" }
hellox-marketplace = { path = "../hellox-marketplace" }
hellox-plugin = { path = "../hellox-plugin" }
hellox-repl = { path = "../hellox-repl" }
hellox-remote = { path = "../hellox-remote" }
hellox-session = { path = "../hellox-session" }
hellox-server = { path = "../hellox-server" }
hellox-style = { path = "../hellox-style" }
hellox-sync = { path = "../hellox-sync" }
hellox-telemetry = { path = "../hellox-telemetry" }
hellox-tui = { path = "../hellox-tui" }
hellox-tools-mcp = { path = "../hellox-tools-mcp" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing-subscriber.workspace = true
sys-locale.workspace = true
