[package]
name = "hellox-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
futures-util.workspace = true
hellox-config = { path = "../hellox-config" }
hellox-core = { path = "../hellox-core" }
hellox-gateway-api = { path = "../hellox-gateway-api" }
hellox-provider-anthropic = { path = "../hellox-provider-anthropic" }
hellox-provider-openai-compatible = { path = "../hellox-provider-openai-compatible" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
uuid.workspace = true
