[package]
name = "hellox-repl"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
hellox-config = { path = "../hellox-config" }
hellox-memory = { path = "../hellox-memory" }
rustyline.workspace = true
