[package]
name = "hellox-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
hellox-config = { path = "../hellox-config" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
toml.workspace = true

[dev-dependencies]
axum.workspace = true
tokio.workspace = true
