[package]
name = "hellox-telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
hellox-agent = { path = "../hellox-agent" }
hellox-config = { path = "../hellox-config" }
hellox-memory = { path = "../hellox-memory" }
hellox-session = { path = "../hellox-session" }
serde.workspace = true
serde_json.workspace = true

