[package]
name = "hellox-tools-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
hellox-config = { path = "../hellox-config" }
hellox-gateway-api = { path = "../hellox-gateway-api" }
hellox-tool-runtime = { path = "../hellox-tool-runtime" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
