[package]
name = "hellox-tools-fs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
hellox-gateway-api = { path = "../hellox-gateway-api" }
hellox-tool-runtime = { path = "../hellox-tool-runtime" }
lopdf.workspace = true
regex.workspace = true
serde_json.workspace = true
similar.workspace = true

[dev-dependencies]
tokio.workspace = true
uuid.workspace = true
