[package]
name = "hellox-tools-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
hellox-auth = { path = "../hellox-auth" }
hellox-config = { path = "../hellox-config" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
