[package]
name = "hellox-tools-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
hellox-auth = { path = "../hellox-auth" }
hellox-config = { path = "../hellox-config" }
hellox-gateway-api = { path = "../hellox-gateway-api" }
hellox-tool-runtime = { path = "../hellox-tool-runtime" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
