[package]
name = "hellox-tools-shell"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
hellox-gateway-api = { path = "../hellox-gateway-api" }
hellox-tool-runtime = { path = "../hellox-tool-runtime" }
serde_json.workspace = true
tokio.workspace = true
