[package]
name = "hellox-tools-web"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
hellox-gateway-api = { path = "../hellox-gateway-api" }
hellox-tool-runtime = { path = "../hellox-tool-runtime" }
reqwest.workspace = true
scraper.workspace = true
serde_json.workspace = true

